--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h2>7. Contacto</h2>
   <p>
     Para dudas o comentarios sobre la privacidad, escríbenos a:<br/>
-    <a href="mailto:leo.escobar.dev@gmail.com">leo.escobar.dev@gmail.com</a>
+    <a href="mailto:leo_fcleon@hotmail.com">leo_fcleon@hotmail.com</a>
   </p>
 </body>
 </html>
